updated bonsai.tex to work with xelatex; added some latex artefacts to .gitignore

--- a/doc/bonsai.tex
+++ b/doc/bonsai.tex
@@ -1,7 +1,17 @@
-\documentclass[12pt,a4paper]{report}
+\documentclass[12pt,a4paper]{memoir}
 \usepackage{url}
+\usepackage{fontspec} 
+\usepackage{xunicode}
+\usepackage{xltxtra}
 
-\title{Bonsai\\Un limbal dinamic fun\c tional peste DLR}
+\usepackage[romanian]{babel}
+\hyphenpenalty=5000
+\tolerance=1000
+
+\setmainfont[Mapping=tex-text]{Calluna}
+\setmonofont[Mapping=tex-text]{Inconsolata}
+
+\title{Bonsai\\Un limbal dinamic funcțional peste DLR}
 
 \begin{document}
 \maketitle
