added 'Functii de ordin superior' to the docs

--- a/doc/bonsai.tex
+++ b/doc/bonsai.tex
@@ -100,7 +100,17 @@ Un \texttt{block} este un set de instrucțiuni împreună cu o listă de variabi
 
 \section{Structuri de date}
 
-Funcția \texttt{list} crează o listă. Majoritatea apelurilor catre o listă întorc (unde este cazul) o instanță nouă, fără să modifice lista originală. Toate operațiile pe liste binecunoscute în limbajele funcționale (\texttt{map, reduce, foldl, foldr,} etc) sunt disponibile și în Bonsai.
+\draft{Funcția \texttt{list} crează o listă. Majoritatea apelurilor catre o listă întorc (unde este cazul) o instanță nouă, fără să modifice lista originală. Toate operațiile pe liste binecunoscute în limbajele funcționale (\texttt{map, reduce, foldl, foldr,} etc) sunt disponibile și în Bonsai.}
+
+\section{Funcții de ordin superior}
+
+\subsection{combine}
+
+\subsection{apply}
+
+\subsection{papply}
+
+\subsection{ref}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Bonsai și Programarea Orientată Obiect}
@@ -143,7 +153,7 @@ Limbaj dinamic = polimorfism implicit
 
 \section{Instanțierea obiectelor}
 
-\section{Pasarea de funcții/obiecte Bonsai către metode .NET}
+\section{Pasarea funcțiilor Bonsai către metode .NET}
 
 \section{Integrarea cu alte limbaje dinamice}
 
