some more progress with the documentation

--- a/doc/bonsai.bib
+++ b/doc/bonsai.bib
@@ -52,3 +52,30 @@ note = "\url{http://iolanguage.com/scm/git/checkout/Io/docs/IoGuide.html#Objects
 title = "Limbajul SmallTalk",
 note = "\url{http://www.smalltalk.org/articles/article_20040000_11.html}"
 }
+
+@misc { antlr_tree_grammars,
+title = "ANTLR Tree Grammars",
+note = "\url{http://www.antlr.org/article/1100569809276/use.tree.grammars.tml}"
+}
+
+@misc { antlr,
+title = "The ANTLR Parser Generator",
+note = "\url{http://www.antlr.org}"
+}
+
+@book {definitive_antlr_reference,
+author = "Terence Parr",
+title = "The Definitive ANTLR Reference: Building Domain-Specific Languages",
+publisher = "Pragmatic Bookshelf",
+yearh = "2007"
+}
+
+@misc { antlr_targets,
+title = "ANTLR3 Code Generation Targets",
+note = "\url{http://www.antlr.org/wiki/display/ANTLR3/Code+Generation+Targets}"
+}
+
+@misc { linq_expressions,
+title = "System.Linq.Expressions Namespace",
+note = "\url{http://msdn.microsoft.com/en-us/library/system.linq.expressions.aspx}"
+}
