protected bibliography items from auto-capitalization

--- a/doc/bonsai.bib
+++ b/doc/bonsai.bib
@@ -1,81 +1,81 @@
 @misc { daVinciMachine,
-title = "The Da Vinci Machine",
+title = "The {Da Vinci Machine}",
 note = "\url{http://openjdk.java.net/projects/mlvm/}"
 }
 
 @misc { dlr,
-title = "Dynamic Language Runtime",
+title = "{Dynamic Language Runtime}",
 note = "\url{http://www.codeplex.com/dlr}"
 }
 
 @misc { jruby,
-title = "JRuby",
+title = "{JR}uby",
 note = "\url{http://jruby.codehaus.org/}"
 }
 
 @misc { jython,
-title = "Jython",
+title = "{J}ython",
 note = "\url{http://www.jython.org/}"
 }
 
 @misc { ironruby,
-title = "IronRuby",
+title = "{I}ron{R}uby",
 note = "\url{http://www.ironruby.net/}"
 }
 
 @misc { ironpython,
-title = "IronPython",
+title = "{I}ron{P}ython",
 note = "\url{http://www.codeplex.com/IronPython}"
 }
 
 @misc { clhs_symbols,
-title = "CLHS symbol type",
+title = "{CLHS} \texttt{symbol} type",
 note = "\url{http://www.lispworks.com/documentation/HyperSpec/Body/t_symbol.htm#symbol}"
 }
 
 @misc { ruby_symbols,
-title = "Clasa Symbol din limbajul Ruby",
+title = "Clasa \texttt{Symbol} din limbajul {R}uby",
 note = "\url{http://www.ruby-doc.org/core/classes/Symbol.html}"
 }
 
 @misc { io,
-title = "Limbajul Io",
+title = "Limbajul {I}o",
 note = "\url{http://iolanguage.com}"
 }
 
 @misc { io_blocks,
-title = "Blocks in limbajul Io",
+title = "Blocks în limbajul {I}o",
 note = "\url{http://iolanguage.com/scm/git/checkout/Io/docs/IoGuide.html#Objects-Blocks}"
 }
 
 @misc { smalltalk,
-title = "Limbajul SmallTalk",
+title = "Limbajul {SmallTalk}",
 note = "\url{http://www.smalltalk.org/articles/article_20040000_11.html}"
 }
 
 @misc { antlr_tree_grammars,
-title = "ANTLR Tree Grammars",
+title = "{ANTLR} Tree Grammars",
 note = "\url{http://www.antlr.org/article/1100569809276/use.tree.grammars.tml}"
 }
 
 @misc { antlr,
-title = "The ANTLR Parser Generator",
+title = "The {ANTLR} Parser Generator",
 note = "\url{http://www.antlr.org}"
 }
 
 @book {definitive_antlr_reference,
 author = "Terence Parr",
-title = "The Definitive ANTLR Reference: Building Domain-Specific Languages",
+title = "The Definitive {ANTLR} Reference: Building Domain-Specific Languages",
 publisher = "Pragmatic Bookshelf",
 yearh = "2007"
 }
 
 @misc { antlr_targets,
-title = "ANTLR3 Code Generation Targets",
+title = "{ANTLR3} Code Generation Targets",
 note = "\url{http://www.antlr.org/wiki/display/ANTLR3/Code+Generation+Targets}"
 }
 
 @misc { linq_expressions,
-title = "System.Linq.Expressions Namespace",
+title = "The \texttt{System.Linq.Expressions} Namespace",
 note = "\url{http://msdn.microsoft.com/en-us/library/system.linq.expressions.aspx}"
 }
